<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.5</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<packaging>pom</packaging>
	<groupId>com.ia</groupId>
	<artifactId>ia-core</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ia-core</name>
	<description>Core para aplicações com vaadin e jpa</description>
	<properties>
		<java.version>21</java.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<mapstruct-lombok.version>0.2.0</mapstruct-lombok.version>
		<vaadin.version>24.8.7</vaadin.version>
		<spring-cloud.version>2025.0.0</spring-cloud.version>
		<antlr.version>4.13.2</antlr.version>
		<jjwt.version>0.12.6</jjwt.version>
		<jasper.version>6.21.4</jasper.version>
		<spring-ai.version>1.1.0-M3</spring-ai.version>
		<ckeditor.version>4.1.2-8</ckeditor.version>
		<owlapi.version>5.5.1</owlapi.version>
		<openllet.version>2.6.5</openllet.version>
		<reflections.version>0.10.2</reflections.version>
		<cron-utils.version>9.2.1</cron-utils.version>
		<apache.poi.version>5.5.0</apache.poi.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>${reflections.version}</version>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<!-- See
						https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html -->
						<!-- Classpath elements to supply as annotation
						processor path. If 
							specified, the compiler -->
						<!-- will detect annotation processors only in those
						classpath elements. 
							If omitted, the -->
						<!-- default classpath is used to detect annotation
						processors. The 
							detection itself depends -->
						<!-- on the configuration of annotationProcessors. -->
						<!-- -->
						<!-- According to this documentation, the provided
						dependency processor 
							is not considered! -->
						<annotationProcessorPaths>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${mapstruct.version}</version>
							</path>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok-mapstruct-binding</artifactId>
								<version>${mapstruct-lombok.version}</version>
							</path>
						</annotationProcessorPaths>
						<compilerArgs>
							<compilerArg>
								-Amapstruct.defaultComponentModel=spring
							</compilerArg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.3.0</version>
					<configuration>
						<configLocation>checkstyle.xml</configLocation>
						<encoding>UTF-8</encoding>
						<consoleOutput>true</consoleOutput>
						<failsOnError>true</failsOnError>
						<linkXRef>false</linkXRef>
					</configuration>
					<executions>
						<execution>
							<id>validate</id>
							<phase>validate</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.21.2</version>
					<configuration>
						<printFailingErrors>true</printFailingErrors>
						<failOnViolation>true</failOnViolation>
					</configuration>
					<executions>
						<execution>
							<phase>verify</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>4.8.3.0</version>
					<configuration>
						<failOnError>true</failOnError>
					</configuration>
					<executions>
						<execution>
							<phase>verify</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.11</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>report</id>
							<phase>verify</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<repositories>
		<repository>
			<id>vaadin-addons</id>
			<name>vaadin-addons</name>
			<url>https://maven.vaadin.com/vaadin-addons/</url>
		</repository>
	</repositories>
	<modules>
		<module>ia-core-model</module>
		<module>ia-core-service</module>
		<module>ia-core-rest</module>
		<module>ia-core-view</module>
		<module>ia-core-grammar</module>
		<module>ia-core-nlp</module>
		<module>ia-core-security-model</module>
		<module>security-core-service</module>
		<module>ia-core-service-model</module>
		<module>ia-core-security-view</module>
		<module>ia-core-security-service-model</module>
		<module>ia-core-report</module>
		<module>ia-core-llm-service-model</module>
		<module>ia-core-llm-model</module>
		<module>ia-core-llm-service</module>
		<module>ia-core-llm-view</module>
		<module>ia-core-flyway</module>
		<module>ia-core-quartz</module>
		<module>ia-core-quartz-service-model</module>
		<module>ia-core-quartz-service</module>
		<module>ia-core-quartz-view</module>
	</modules>
</project>
